# Sports-Guide-Backend

./: .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: Dockerfile  db.sqlite3.bak  manage.py  mysite_data.json  pyproject.toml  schema.yaml
backend/areas/: admin.py  apps.py  constants.py  factories.py  models.py  signals.py  tasks.py  validators.py
backend/areas/api/: filters.py  pagination.py  permissions.py  schemas.py  serializers.py  urls.py  views.py
backend/areas/api/tests/: test_areas.py  test_categories.py  test_comments.py  test_filters.py
backend/areas/migrations/: 0001_initial.py  0002_alter_area_categories_alter_category_slug.py  0002_remove_report_images_reportimage.py  0003_alter_category_slug.py  0004_alter_category_name.py  0005_alter_area_author.py  0006_category_area_name.py  0006_category_area_name_favoritearea_and_more.py  0006_favoritearea_favoritearea_unique_favorite_area.py  0007_area_address_area_description.py  0008_alter_category_name_alter_comment_comment.py  0009_alter_area_latitude_alter_area_longitude.py  0010_categoryicon_category_icon.py
backend/config/: celery.py  settings.py  urls.py
backend/core/: constants.py  email.py
backend/reports/: admin.py  apps.py  models.py
backend/reports/api/: serializers.py  urls.py  views.py
backend/reports/migrations/: 0001_initial.py  0002_alter_report_options_rename_image_report_images.py  0003_alter_report_latitude_alter_report_longitude.py  0004_remove_report_area.py
backend/users/: admin.py  fields.py  manager.py  models.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py
backend/users/api/: schemas.py  serializers.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_email_alter_customuser_nickname.py  0002_alter_customuser_nickname.py  0003_alter_customuser_is_active.py
backend/users/social/pipeline/: user.py
(+10 files in other folders)
